fixed all the new form locations and the footer overlapping certain things on certain pages

--- a/client/src/Components/Nav/footer.css
+++ b/client/src/Components/Nav/footer.css
@@ -2,11 +2,15 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
-    
+    /* height: 2.5rem; */
+    height: 1px;
 }
 
 /* .footer-middle {
     padding-top: 0;
     margin-top: 50vh;
 } */
+
+.footer-middle {
+    margin-top: 40px;
+}
